# sweet-cosi-cesdm

./: CESDM_Schema_Reference.html  CHANGELOG.md  GITHUB_PAGES_SETUP.md  LICENSE  README.md  cesdm_toolbox.py  conftest.py  download_external_data.py  ear_toolbox.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
analysis_profiles/: optimal_dispatch.yaml
cesdm/: __init__.py  generated_proxies.py  helpers.py  proxy.py
docs/: 00_disclaimer.md  01_introduction.md  02_core_concepts.md  03_schemas.md  04_energy_domain_schemas.md  05_building_models.md  06_examples_description.md  07_examples.md  08_timeseries.md  Makefile  conf.py  getting_started.md  index.md  index.rst  requirements.txt  schema_layout.md
ear/: __init__.py  attribute_def.py  constraint.py  entity.py  entity_class.py  helpers.py  relation_def.py  schema_manifest.py
examples/: README_AGENT_BASED_EXAMPLE.md  README_ANALYSIS_VALIDATION_EXAMPLE.md  README_CH_NEIGHBOURS_TUTORIAL.md  README_EAR_GENERIC_DOMAIN_EXAMPLE.md  README_EXPLORE_MODEL_EXAMPLE.md  README_HYDRO_RESERVOIR_EXAMPLE.md  README_IN_README_EXAMPLE.md  README_KUNDUR_TWO_AREA_EXAMPLE.md  README_MULTIENERGY_EXAMPLE.md  README_POWERFLOW_EXPORT_EXAMPLE.md  README_PYPSA_IMPORT_LOGIC.md  README_SCHEMA_EXTENSION_EXAMPLE.md  README_SIMPLE_EXAMPLE.md  README_TYNDP_IMPORT_LOGIC.md  ch_neighbours_tutorial.html  example_agent_based_prosumer_model.py  example_analysis_validation.py  example_cesdm_to_pandapower_and_matpower.py  example_ch_and_neighbours.py  example_ear_generic_domain.py  example_explore_cesdm_model.py  example_hydro_reservoir_plant.py  example_import_export_tydnp.py  example_import_pypsa.py  example_import_pypsa_nc.py  example_import_tyndp.py  example_import_tyndp_proxy_api.py  example_in_readme.py  example_kundur_two_area.py  example_multienergy.py  example_schema_extension.py  example_simple.py  example_tydnp_to_flexeco.py  tutorial_ch_neighbours.py
schemas/: CombinedHeatandPowerPlant.yaml  DCLink.yaml  ElectricityNode.yaml  EnergyCarrier.yaml  EnergyConversion.yaml  EnergyConversionTechnology.yaml  EnergyConversionTechnology1x1.yaml  EnergyConversionTechnology1x2.yaml  EnergyDemand.yaml  EnergyDomain.yaml  EnergyNode.yaml  EnergyStorageTechnology.yaml  EnergySystemModel.yaml  EnergyTechnology.yaml  GeographicalRegion.yaml  NetTransferCapacity.yaml  Node.yaml  SCHEMA_MANIFEST.yaml  StorageTechnologyType.yaml  TechnologyType.yaml  TransmissionLine.yaml  TwoWindingPowerTransformer.yaml
schemas_agentbased/: SCHEMA_MANIFEST.yaml
tests/: test_abstract_resolution.py  test_analysis_validation.py  test_analysis_validation_generic_ear.py  test_asset_proxy_setattr.py  test_asset_proxy_string_coercion.py  test_attribute_semantics.py  test_builders_reorganization.py  test_builders_return_types.py  test_default_library_source_validation.py  test_default_library_typings_and_validation.py  test_download_external_data.py  test_dynamic_attribute_naming_and_defaults.py  test_generate_typings.py  test_generated_builder_default_optionality.py  test_generation_technology_routing.py  test_hvdc_schema.py  test_model_summary.py  test_naming_audit_fixes.py  test_no_source_identifiers.py  test_powerflow_snapshot_vs_timeseries.py  test_proxy_api.py  test_pypsa_default_library_carriers.py  test_pypsa_default_library_mapping.py  test_rdf_export.py  test_registry_auto_discovery.py  test_schema_convenience_api.py  test_schema_filenames_match_class_names.py  test_technology_default_cascade.py  test_tyndp_full_pipeline.py  test_tyndp_hydro_dispatch_efficiency.py  test_tyndp_proxy_api_importer.py  test_unit_registry.py  test_unit_vocabulary_consistency.py  test_view_family.py  test_view_only_asset_export.py
tools/: aggregate_cesdm_yaml_subset.py  cesdm_carriers.py  cesdm_frictionless_to_flexeco.py  cesdm_yaml_to_flexeco.py  export_matpower.py  export_pandapower.py  generate_cesdm_schema_html.py  generate_convenience_api.py  generate_default_library.py  generate_typings.py  generation_classifier.py  hydro_utils.py  import_pypsa.py  (+6 more)
(+227 files in other folders)
