[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesdm-toolbox"
version = "0.1.0"
description = "Common Energy System Domain Model toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Research Center for Energy Networks - ETH Zürich" }
]
keywords = [
  "energy systems",
  "semantic modelling",
  "data model",
  "interoperability",
  "schemas",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.23",
  "h5py>=3.8",
  "pandas>=1.5",
]

[project.optional-dependencies]
# Numerical profile export/import, HDF5 time series, and common examples.
data = [
  "numpy>=1.23",
  "h5py>=3.8",
  "pandas>=1.5",
]

# Spreadsheet and tabular exchange formats.
excel = [
  "openpyxl>=3.1",
]
parquet = [
  "pyarrow>=12",
]

# External model importers. Install only when needed.
pypsa = [
  "pypsa>=0.26",
  "numpy>=1.23",
  "pandas>=1.5",
  "h5py>=3.8",
]
tyndp = [
  "numpy>=1.23",
  "pandas>=1.5",
  "h5py>=3.8",
]
pandapower = [
  "pandapower>=2.14",
]
matpower = [
  "pypower>=5.1",
  "scipy>=1.10",
]
geo = [
  "geopandas>=0.13",
]

# RDF/OWL schema export (export_rdf_schema).
rdf = [
  "rdflib>=6.0",
]

# Runtime pydantic model generation (build_pydantic_models). Was already a
# lazy-imported optional dependency; formalized here for discoverability.
pydantic = [
  "pydantic>=2.0",
]

# Documentation build.
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.8",
]

# Development and testing.
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "black>=24",
  "build>=1",
  "pyright>=1.1",
]

# Convenience bundle for users who want all optional capabilities.
all = [
  "numpy>=1.23",
  "pandas>=1.5",
  "h5py>=3.8",
  "openpyxl>=3.1",
  "pyarrow>=12",
  "pypsa>=0.26",
  "geopandas>=0.13",
  "pandapower>=2.14",
  "pypower>=5.1",
  "scipy>=1.10",
  "rdflib>=6.0",
  "pydantic>=2.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.8",
  "pytest>=7",
  "ruff>=0.4",
  "black>=24",
  "build>=1",
]

[project.urls]
Homepage = "https://cesdm.github.io/cesdm-toolbox/"
Documentation = "https://cesdm.github.io/cesdm-toolbox/"
Repository = "https://github.com/cesdm/cesdm-toolbox"

[project.scripts]
cesdm-download-data = "download_external_data:main"
cesdm-generate-default-library = "tools.generate_default_library:main"
cesdm-generate-api = "tools.generate_convenience_api:main"
cesdm-generate-typings = "tools.generate_typings:main"
cesdm-update-generated = "tools.update_generated:main"


[tool.setuptools]
# cesdm_toolbox.py / ear_toolbox.py are kept as thin backward-compatible
# shims re-exporting the "cesdm" / "ear" packages below (see
# docs/architecture/package_layout.md). New code should import from the
# packages directly.
py-modules = ["cesdm_toolbox", "ear_toolbox", "download_external_data"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tools*", "ear*", "cesdm*"]

[tool.setuptools.package-data]
cesdm_resources = [
  "schemas/**/*.yaml",
  "schemas_agentbased/**/*.yaml",
  "library/**/*.yaml",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pyright]
# Resolves the .pyi stubs generated by tools/generate_typings.py
# (see README.md, "Editor typings") automatically for anyone opening
# this repo in Pyright/Pylance -- no separate pyrightconfig.json
# needed. Regenerate typings/ after schema or CesdmModel-mixin
# signature changes; this config just tells Pyright where to look.
stubPath = "typings"
